Fix CSS dark mode toggle

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,7 +18,7 @@ html {
     font-size: 18px;
 }
 
-html.light-theme {
+html.dark-theme {
     background-color: var(--dark-color);
     color: var(--light-color);
 }
